--- a/requirements.txt
+++ b/requirements.txt
@@ -33,7 +33,7 @@ ConfigUpdater==3.1.1
 cron-descriptor==1.4.0
 croniter==1.4.1
 cryptography==41.0.4
-cycler==0.12.1
+cycler
 debugpy==1.6.3
 decorator==5.1.1
 defusedxml==0.7.1
