--- a/requirements.txt
+++ b/requirements.txt
@@ -39,27 +39,27 @@ decorator==5.1.1
 defusedxml==0.7.1
 Deprecated==1.2.14
 dill==0.3.7
-Django==4.1.1
-dnspython==2.4.2
-docutils==0.20.1
-Eel==0.14.0
-email-validator==2.1.0.post1
-entrypoints==0.4
-exceptiongroup==1.1.3
-executing==1.1.0
+Django
+dnspython
+docutils
+Eel
+email-validator
+entrypoints
+exceptiongroup
+executing
 fastapi
-fastjsonschema==2.16.2
-Flask==2.2.5
-Flask-AppBuilder==4.3.6
-Flask-Babel==2.0.0
-Flask-Caching==2.0.2
-Flask-JWT-Extended==4.5.3
-Flask-Limiter==3.5.0
-Flask-Login==0.6.2
-Flask-Session==0.5.0
-Flask-SQLAlchemy==2.5.1
-Flask-WTF==1.2.1
-fonttools==4.43.1
+fastjsonschema
+Flask
+Flask-AppBuilder
+Flask-Babel
+Flask-Caching
+Flask-JWT-Extended
+Flask-Limiter
+Flask-Login
+Flask-Session
+Flask-SQLAlchemy
+Flask-WTF
+fonttools
 frozenlist==1.3.3
 future==0.18.2
 gevent==21.12.0
