--- a/requirements.txt
+++ b/requirements.txt
@@ -60,160 +60,151 @@ Flask-Session
 Flask-SQLAlchemy
 Flask-WTF
 fonttools
-frozenlist==1.3.3
-future==0.18.2
-gevent==21.12.0
-gevent-websocket==0.10.1
-google-re2==1.1
-googleapis-common-protos==1.60.0
-graphviz==0.20.1
-greenlet==1.1.2
-grpcio==1.59.0
-gunicorn==21.2.0
-h11==0.14.0
-httpcore==0.18.0
-httptools==0.6.1
-httpx==0.25.0
-idna==3.4
-importlib-metadata==6.8.0
-importlib-resources==6.1.0
-inflection==0.5.1
-ipykernel==6.16.0
-ipython==8.5.0
-ipython-genutils==0.2.0
-itsdangerous==2.1.2
-jedi==0.18.1
-Jinja2==3.1.2
-joblib==1.3.2
-jsonschema==4.19.1
-jsonschema-specifications==2023.7.1
-jupyter-core==4.11.1
-jupyter_client==7.3.5
-jupyterlab-pygments==0.2.2
-kiwisolver==1.4.5
-lazy-object-proxy==1.9.0
-limits==3.6.0
-linkify-it-py==2.0.2
-lockfile==0.12.2
-lxml==4.9.1
-magic-filter==1.0.9
-Mako==1.2.4
-Markdown==3.4.4
-markdown-it-py==3.0.0
-MarkupSafe==2.1.1
-marshmallow==3.20.1
-marshmallow-oneofschema==3.0.1
-marshmallow-sqlalchemy==0.26.1
-matplotlib==3.8.0
-matplotlib-inline==0.1.6
-mdit-py-plugins==0.4.0
-mdurl==0.1.2
-mistune==2.0.4
-multidict==6.0.4
-nbclient==0.6.8
-nbconvert==7.1.0
-nbformat==5.6.1
-nest-asyncio==1.5.6
-notebook==6.4.12
-numpy==1.23.3
-openai==0.27.8
-opentelemetry-api==1.20.0
-opentelemetry-exporter-otlp==1.20.0
-opentelemetry-exporter-otlp-proto-common==1.20.0
-opentelemetry-exporter-otlp-proto-grpc==1.20.0
-opentelemetry-exporter-otlp-proto-http==1.20.0
-opentelemetry-proto==1.20.0
-opentelemetry-sdk==1.20.0
-opentelemetry-semantic-conventions==0.41b0
-ordered-set==4.1.0
-orjson==3.9.10
-packaging==21.3
-pandas==2.1.2
-pandocfilters==1.5.0
-parso==0.8.3
-pathspec==0.11.2
-pefile==2022.5.30
-pendulum==2.1.2
-pickleshare==0.7.5
-Pillow==9.2.0
-pluggy==1.3.0
-prison==0.2.1
-prometheus-client==0.14.1
-prompt-toolkit==3.0.31
-protobuf==4.24.4
-psutil==5.9.2
-pure-eval==0.2.2
-pycparser==2.21
-pydantic==2.4.2
-pydantic-extra-types==2.1.0
-pydantic-settings==2.0.3
-pydantic_core==2.10.1
-Pygments==2.13.0
-pyinstaller==5.3
-pyinstaller-hooks-contrib==2022.8
-PyJWT==2.8.0
-pyparsing==3.0.9
-pyrsistent==0.18.1
-python-daemon==3.0.1
-python-dateutil==2.8.2
-python-dotenv==1.0.0
-python-multipart==0.0.6
-python-nvd3==0.15.0
-python-pptx==0.6.21
-python-slugify==8.0.1
-pytz==2023.3.post1
-pytzdata==2020.1
-pywin32==304
-pywin32-ctypes==0.2.0
-pywinpty==2.0.8
-PyYAML==6.0.1
-pyzmq==24.0.1
-referencing==0.30.2
-requests==2.31.0
-requests-toolbelt==1.0.0
-rfc3339-validator==0.1.4
-rich==13.6.0
-rich-argparse==1.3.0
-rpds-py==0.10.4
-scikit-learn==1.3.1
-scipy==1.11.3
-Send2Trash==1.8.0
-setproctitle==1.3.3
-six==1.16.0
-sniffio==1.3.0
-soupsieve==2.3.2.post1
-SQLAlchemy==1.4.49
-SQLAlchemy-JSONField==1.0.1.post0
-SQLAlchemy-Utils==0.41.1
-sqlparse==0.4.2
-stack-data==0.5.1
-starlette==0.27.0
-tabulate==0.9.0
-tenacity==8.2.3
-termcolor==2.3.0
-terminado==0.16.0
-text-unidecode==1.3
-threadpoolctl==3.2.0
-tinycss2==1.1.1
-tornado==6.2
-tqdm==4.65.0
-traitlets==5.4.0
-tzdata==2022.2
-uc-micro-py==1.0.2
-ujson==5.8.0
-unicodecsv==0.14.1
-urllib3==2.0.3
+frozenlist
+future
+gevent
+gevent-websocket
+google-re2
+googleapis-common-protos
+graphviz
+greenlet
+grpcio
+gunicorn
+h11
+httpcore
+httptools
+httpx
+idna
+importlib-metadata
+importlib-resources
+inflection
+ipykernel
+ipython
+ipython-genutils
+itsdangerous
+jedi
+Jinja2
+joblib
+jsonschema
+jsonschema-specifications
+jupyter-core
+jupyter_client
+jupyterlab-pygments
+kiwisolver
+lazy-object-proxy
+limits
+linkify-it-py
+lockfile
+lxml
+magic-filter
+Mako
+Markdown
+markdown-it-py
+MarkupSafe
+marshmallow
+marshmallow-oneofschema
+marshmallow-sqlalchemy
+matplotlib
+matplotlib-inline
+mdit-py-plugins
+mdurl
+mistune
+multidict
+nbclient
+nbconvert
+nbformat
+nest-asyncio
+notebook
+numpy
+ordered-set
+orjson
+packaging
+pandas
+pandocfilters
+parso
+pathspec
+pefile
+pendulum
+pickleshare
+Pillow
+pluggy
+prison
+prometheus-client
+prompt-toolkit
+protobuf
+psutil
+pure-eval
+pycparser
+pydantic
+pydantic-extra-types
+pydantic-settings
+pydantic_core
+Pygments
+pyinstaller
+pyinstaller-hooks-contrib
+PyJWT
+pyparsing
+pyrsistent
+python-daemon
+python-dateutil
+python-dotenv
+python-multipart
+python-nvd3
+python-pptx
+python-slugify
+pytz
+pytzdata
+pywin32
+pywin32-ctypes
+pywinpty
+PyYAML
+pyzmq
+referencing
+requests
+requests-toolbelt
+rfc3339-validator
+rich
+rich-argparse
+rpds-py
+scikit-learn
+scipy
+Send2Trash
+setproctitle
+six
+sniffio
+soupsieve
+SQLAlchemy
+SQLAlchemy-JSONField
+SQLAlchemy-Utils
+sqlparse
+stack-data
+starlette
+tabulate
+tenacity
+termcolor
+terminado
+text-unidecode
+threadpoolctl
+tinycss2
+tornado
+tqdm
+traitlets
+tzdata
+uc-micro-py
+ujson
+unicodecsv
+urllib3
 uvicorn
-watchfiles==0.21.0
-wcwidth==0.2.5
-webencodings==0.5.1
-websockets==12.0
-Werkzeug==2.2.3
-whichcraft==0.6.1
-wrapt==1.15.0
-WTForms==3.0.1
-XlsxWriter==3.0.3
-yarl==1.9.2
-zipp==3.17.0
-zope.event==4.5.0
-zope.interface==5.4.0
+watchfiles
+wcwidth
+webencodings
+websockets
+Werkzeug
+whichcraft
+wrapt
+WTForms
+XlsxWriter
+yarl
+zipp
+zope.event
+zope.interface
