--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,7 @@
-﻿aiohttp==3.8.4
+pywin32==304
+pywin32-ctypes
+pywinpty
+aiohttp==3.8.4
 aiosignal==1.3.1
 alembic==1.12.0
 altgraph==0.17.2
@@ -154,9 +157,6 @@ python-pptx
 python-slugify
 pytz
 pytzdata
-pywin32
-pywin32-ctypes
-pywinpty
 PyYAML
 pyzmq
 referencing
